examples/errors/compile/invalid-token.archbtw
; Example program that should cause an "invalid token" compile-time error.

; This is an invalid token:
manjaro
